# hex-converter

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
assets/: AppIcon.icns
src/hex_converter/: __about__.py  __init__.py  __main__.py  cli.py  gui.py  gui_menu.py  logic.py
tests/: conftest.py  test_ascii_runs.py  test_boundaries.py  test_group_bytes_custom.py  test_group_bytes_hex_display.py  test_group_bytes_uniform.py  test_gui_menu.py  test_hex_converter.py  test_int_ranges_and_parse_int.py  test_parse_hex_bytes.py  test_roundtrip_int_to_bytes.py
