[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hex-converter"
dynamic = ["version"]
description = "Hex bytes ⇆ integer/text converter GUI (Tkinter) with testable core logic"
authors = [
  { name = "Wired Square", email = "alex@wiredsquare.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["hex", "bytes", "converter", "tkinter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications :: GTK",
  "Operating System :: POSIX :: Linux",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://wiredsquare.com/hex-converter"

[project.scripts]
hex-converter = "hex_converter.cli:main"

[project.gui-scripts]
"Hex Converter" = "hex_converter.gui:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools.dynamic]
version = { attr = "hex_converter.__about__.__version__" }
